Update put endpoint
Now the endpoint can change also only one value
