# backend/assets/openapi.json
@@ -73,7 +73,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Tournament"
+                  "$ref": "#/components/schemas/UpdateTournament"
                 }
               }
             }
@@ -232,7 +232,35 @@
                 "minLength": 3
             }
           },
-          "required": ["name"]
+          "required": ["name", "description", "url_slug" ]
+        },
+        "UpdateTournament": {
+          "type": "object",
+          "properties": {
+            "name": {
+              "type": "string",
+              "maxLength": 40,
+              "minLength": 3
+            },
+            "description": {
+              "type": "string",
+              "maxLength": 500,
+              "minLength": 3
+            },
+            "player_code": {
+              "type": "string",
+              "minLength": 4
+            },
+            "admin_code": {
+                "type": "string",
+                "minLength": 4
+            },
+            "url_slug": {
+                "type": "string",
+                "maxLength": 15,
+                "minLength": 3
+            }
+          }
         },
         "BadRequestError": {
           "type": "object",
